<resources>
    <string name="app_name">Ingegneria Uniparthenope</string>
    <string name="news">News</string>
    <string name="professors">Professors</string>
    <string name="lessons_timetable">Lessons</string>
    <string name="civileT" translatable="false">Civile e Ambientale</string>
    <string name="civileM" translatable="false">Civile magistrale</string>
    <string name="gestionaleT" translatable="false">Gestionale</string>
    <string name="gestionaleM" translatable="false">Gestionale magistrale</string>
    <string name="tlcT" translatable="false">Informatica, Biomedica e delle Telecomunicazioni</string>
    <string name="tlcM" translatable="false">Sicurezza dei Dati e delle Comunicazioni magistrale</string>
    <string name="pname">Name</string>
    <string name="poffice">Office</string>
    <string name="ptelephone">Telephone</string>
    <string name="pemail">Email</string>
    <string name="ITEM_1">How to find us?</string>
    <string name="ITEM_2" translatable="false">Association</string>
    <string name="ITEM_3" translatable="false">Info</string>
    <string name="ITEM_4">Exit</string>
    <string name="ITEM_7">Developers</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="UTIL_1">Facebook Group</string>
    <string name="UTIL_2">Blended Learning</string>
    <string name="UTIL_3">Useful Links</string>
    <string name="UTIL_4" translatable="false">UTILITY</string>
    <string name="UTIL_5" translatable="false">Esse3</string>
    <string name="UTIL_6">University Site</string>

    <string name="infoapp">This application is a guide for the Uniparthenope engineering student. There are news, hours and everything related to the engineering course. The authors are not responsible for sudden changes in hours or notices.</string>
    <string name="giornoNews">News del</string>
    <string name="noPNews">No latest news</string>
    <string name="newsIndication">Swipe to change news</string>
    <string name="ITEM_5">Open site</string>
    <string name="UTIL_7">Department Site</string>
    <string name="noNNews">No older news</string>
    <string name="staff">Staff</string>
    <string name="downloaderror">Download error. Check your internet connection and try again by going back to the main menu.</string>
    <string name="nointernet">No Internet connection. This app needs an active internet connection to work as intended!</string>
    <string name="forms">Forms</string>
    <string name="parttimerequest">Part-time request</string>
    <string name="exemption_handicap">Request exemption for disabled people</string>
    <string name="rinuncia_studi">give up studies</string>
    <string name="domanda_decadenza">Application for revocation</string>
    <string name="richiesta_certificati">Richiesta certificati</string>
    <string name="domanda_laurea">Graduation exam application</string>
    <string name="esami_scelta">exam request form chosen</string>
    <string name="domand_laurea">graduation exam application and parchment request</string>
    <string name="ITEM_6">Reload</string>
    <string name="downloadingStatus">Downloading</string>
    <string name="mypos">My position</string>
    <string name="noposition">Current position not found. Path from Garibaldi Square Station</string>
    <string name="yesposition">Path from your current position</string>
    <string name="newsfile_data" translatable="false">newsdata</string>
    <string name="newsfile_titolo" translatable="false">newstitolo</string>
    <string name="newsfile_contenuto" translatable="false">newscontenuto</string>
    <string name="proffile_nome" translatable="false">profnome</string>
    <string name="proffile_telefono" translatable="false">proftelefono</string>
    <string name="proffile_studio" translatable="false">profstudio</string>
    <string name="proffile_email" translatable="false">profemail</string>
    <string name="techfile_nome" translatable="false">technome</string>
    <string name="techfile_telefono" translatable="false">techtelefono</string>
    <string name="techfile_studio" translatable="false">techstudio</string>
    <string name="techfile_email" translatable="false">techemail</string>
    <string name="cant">No internet connection and no file to load found</string>
    <string name="pos_not_allowed">Access to the position is not allowed. Path from Garibaldi Square Station</string>
    <string name="yourposition">Your position</string>
    <string name="garibaldi">Garibaldi Place Station</string>
    <string name="universityposition">Department of engineering - Parthenope University</string>
    <string name="todo">TODO</string>
</resources>
