<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:gravity="center|top"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="331dp"
        android:layout_height="129dp"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonStudenti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="10dp">

            <Button
                android:id="@+id/buttonOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:baselineAligned="false"
                android:text="@string/news"
                android:textAppearance="@style/TextAppearance.AppCompat"
                tools:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/buttonThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/lessons_timetable"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/background_light" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="10dp">

            <Button
                android:id="@+id/buttonTwo"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/professors"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/buttonFour"
                android:layout_width="115dp"
                android:layout_height="65dp"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/UTIL_3"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/background_light"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="290dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/staff"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/buttonSix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/forms"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/background_light" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/linear1">

    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="288dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="390dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-576dp" />

    <ImageButton
        android:id="@+id/buttonStudenti"
        android:layout_width="317dp"
        android:layout_height="60dp"

        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/carta_studenti" />

    <ImageButton
        android:id="@+id/dipartimento"
        android:layout_width="339dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:adjustViewBounds="true"
        android:background="@android:color/background_light"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dipartimento" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="272dp"
        android:layout_height="0dp"
        android:layout_marginBottom="29dp"
        android:layout_marginTop="21dp"
        android:adjustViewBounds="true"
        android:background="@android:color/background_light"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/linear1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dipartimento"
        app:srcCompat="@mipmap/logo_g" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

</android.support.constraint.ConstraintLayout>